[project]
name = "esp_can"
version = "0.0.1"
authors = [
    {name="Mariusz Kryński", email="mrk@sed.pl"}
]
requires-python = ">=3.8"

dependencies = [
    "python-can >= 3.0.0",
    "pyserial",
]

# [project.scripts]  # Optional
# can2mqtt = "main:main"

[project.entry-points."can.interface"]
esp_can = "esp_can:EspCan"

[project.optional-dependencies]
dev = [
    "black"
]
