[project]
name = "esp_usb_serial"
version = "0.0.1"
authors = [
    {name="Mariusz Kryński", email="mrk@sed.pl"}
]
requires-python = ">=3.8"

dependencies = [
    "python-can >= 3.0.0",
    "pyserial",
]

[project.entry-points."can.interface"]
esp_usb_serial = "esp_usb_serial:EspUsbSerial"

[project.optional-dependencies]
dev = [
    "black"
]
esptool = [
    "esptool"
]
